--- a/src/app/components/books-list/books-list.component.html
+++ b/src/app/components/books-list/books-list.component.html
@@ -2,7 +2,7 @@
   <div
     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom"
   >
-    <h2 class="h2">Books List</h2>
+    <h2 class="h2">Books Collection</h2>
   </div>
 
   <div class="table-responsive">
